changes: add text localizations

--- a/src/templates/parts/main/parts/advantages.hbs
+++ b/src/templates/parts/main/parts/advantages.hbs
@@ -5,7 +5,7 @@
       data-on-click='add-advantage'
       src='/systems/animabf/assets/images/boton-plus.png'
     />
-    <h3 class='group-header-title'>Ventajas</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.advantageSection.title'}}</h3>
   </div>
   <div id='advantage-context-menu-container' class='group-body'>
     {{#each data.general.advantages}}
