--- a/src/templates/parts/main/parts/aspect.hbs
+++ b/src/templates/parts/main/parts/aspect.hbs
@@ -1,10 +1,10 @@
 <div class='group aspect'>
   <div class='group-header'>
-    <h3 class='group-header-title'>Aspecto</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.aspectSection.title'}}</h3>
   </div>
   <div class='group-body'>
     <div class='hair flex mr-1'>
-      <p class='label'>Pelo</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.hair.title'}}</p>
       <input
         name='data.general.aspect.hair.value'
         type='text'
@@ -13,7 +13,7 @@
       />
     </div>
     <div class='eyes flex'>
-      <p class='label'>Ojos</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.eyes.title'}}</p>
       <input
         name='data.general.aspect.eyes.value'
         type='text'
@@ -22,7 +22,7 @@
       />
     </div>
     <div class='height flex mr-1'>
-      <p class='label'>Altura</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.height.title'}}</p>
       <input
         name='data.general.aspect.height.value'
         type='text'
@@ -31,7 +31,7 @@
       />
     </div>
     <div class='weight flex'>
-      <p class='label'>Peso</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.weight.title'}}</p>
       <input
         name='data.general.aspect.weight.value'
         type='text'
@@ -40,7 +40,7 @@
       />
     </div>
     <div class='age flex mr-1'>
-      <p class='label'>Edad</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.age.title'}}</p>
       <input
         name='data.general.aspect.age.value'
         type='text'
@@ -49,7 +49,7 @@
       />
     </div>
     <div class='genre flex'>
-      <p class='label'>Sexo</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.genre.title'}}</p>
       <input
         name='data.general.aspect.genre.value'
         type='text'
@@ -58,7 +58,7 @@
       />
     </div>
     <div class='race flex mr-1'>
-      <p class='label'>Raza</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.race.title'}}</p>
       <input
         name='data.general.aspect.race.value'
         type='text'
@@ -67,7 +67,7 @@
       />
     </div>
     <div class='appearance flex'>
-      <p class='label'>Apariencia</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.appearance.title'}}</p>
       <input
         name='data.general.aspect.appearance.value'
         type='text'
@@ -76,7 +76,7 @@
       />
     </div>
     <div class='size flex'>
-      <p class='label'>Tamaño</p>
+      <p class='label'>{{localize 'anima.ui.aspectSection.size.title'}}</p>
       <input
         name='data.general.aspect.size.value'
         type='text'
