--- a/src/templates/parts/main/parts/disadvantages.hbs
+++ b/src/templates/parts/main/parts/disadvantages.hbs
@@ -5,7 +5,7 @@
       data-on-click='add-disadvantage'
       src='/systems/animabf/assets/images/boton-plus.png'
     />
-    <h3 class='group-header-title'>Desventajas</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.disadvantageSection.title'}}</h3>
   </div>
   <div id='disadvantage-context-menu-container' class='group-body'>
     {{#each data.general.disadvantages}}
