--- a/src/templates/parts/main/parts/language.hbs
+++ b/src/templates/parts/main/parts/language.hbs
@@ -5,12 +5,12 @@
       data-on-click='add-language'
       src='/systems/animabf/assets/images/boton-plus.png'
     />
-    <h3 class='group-header-title'>Idiomas</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.languageSection.title'}}</h3>
     <input type='number' class='input' />
   </div>
   <div id='language-context-menu-container' class='group-body'>
     <div class='base-language flex'>
-      <p class='label ml-2 mr-2'>Base</p>
+      <p class='label ml-2 mr-2'>{{localize 'anima.ui.languageSection.base'}}</p>
       <input
         name='data.general.languages.base.value'
         type='text'
