--- a/src/templates/parts/main/parts/titles.hbs
+++ b/src/templates/parts/main/parts/titles.hbs
@@ -5,7 +5,7 @@
       data-on-click='add-title'
       src='/systems/animabf/assets/images/boton-plus.png'
     />
-    <h3 class='group-header-title'>Títulos</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.titleSection.title'}}</h3>
   </div>
   <div id='title-context-menu-container' class='group-body'>
     {{#each data.general.titles}}
