--- a/src/templates/parts/main/parts/description.hbs
+++ b/src/templates/parts/main/parts/description.hbs
@@ -1,6 +1,6 @@
 <div class='group description mt-3'>
   <div class='group-header'>
-    <h3 class='group-header-title'>Descripción</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.descriptionSection.title'}}</h3>
   </div>
   <div class='group-body'>
     <textarea
