--- a/src/templates/parts/main/parts/level.hbs
+++ b/src/templates/parts/main/parts/level.hbs
@@ -5,7 +5,7 @@
       data-on-click='add-level'
       src='/systems/animabf/assets/images/boton-plus.png'
     />
-    <h3 class='group-header-title'>Nivel</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.levelSection.title'}}</h3>
     <input type='number' class='input' />
   </div>
   <div id='level-context-menu-container' class='group-body'>
