--- a/src/templates/parts/main/parts/notes.hbs
+++ b/src/templates/parts/main/parts/notes.hbs
@@ -5,7 +5,7 @@
       data-on-click='add-note'
       src='/systems/animabf/assets/images/boton-plus.png'
     />
-    <h3 class='group-header-title'>Notas</h3>
+    <h3 class='group-header-title'>{{localize 'anima.ui.notesSection.title'}}</h3>
   </div>
   <div id='note-context-menu-container' class='group-body'>
     {{#each data.general.notes}}
