feat: add mystic tab

--- a/src/templates/actor-sheet.html
+++ b/src/templates/actor-sheet.html
@@ -140,7 +140,7 @@
 
 				{{!-- Mystic Tab --}}
 				<div class="tab mystic" data-group="primary" data-tab="mystic">
-					{{> "systems/animabf/templates/parts/mystic.html"}}
+					{{> "systems/animabf/templates/parts/mystic/mystic.hbs"}}
 				</div>
 
 				{{!-- Domine Tab --}}
