--- a/src/templates/parts/general/parts/elan.hbs
+++ b/src/templates/parts/general/parts/elan.hbs
@@ -9,8 +9,8 @@
   </div>
   <div id='elan-context-menu-container' class='group-body'>
     {{#each data.general.elan as |elan|}}
-      <div class='elan-row' data-elan-id='{{elan._id}}'>
-        <div class='base flex'>
+      <div class='elan-row'>
+        <div data-elan-id='{{elan._id}}' class='base flex'>
           <p
             data-on-click='add-elan-power'
             data-elan-id='{{elan._id}}'
@@ -34,7 +34,11 @@
         </div>
 
         {{#each elan.data.powers as |power|}}
-          <div class='powers flex mt-1'>
+          <div
+            class='powers flex mt-1'
+            data-elan-id='{{elan._id}}'
+            data-elan-power-id='{{power._id}}'
+          >
             <input
               type='hidden'
               name='data.dynamic.elan_power.{{power._id}}.elanId'
