--- a/src/templates/parts/mystic/parts/metamagics.hbs
+++ b/src/templates/parts/mystic/parts/metamagics.hbs
@@ -1,6 +1,6 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="metamagics"
-  title="Metamagias"
+  title=(localize "anima.ui.mystic.metamagic.title")
   addRowButtonData="add-metamagic"
 }}
   {{#each data.mystic.metamagics}}
@@ -8,7 +8,7 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="name"
-        title="Metamagia"
+        title=(localize "anima.ui.mystic.metamagic.name.title")
         hideTitle=(is "gt" @index 0)
         inputType="text"
         inputName=(concat "data.dynamic.metamagics." this._id ".name")
@@ -17,7 +17,7 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="grade"
-        title="Grado"
+        title=(localize "anima.ui.mystic.metamagic.grade.title")
         hideTitle=(is "gt" @index 0)
         inputName=(concat "data.dynamic.metamagics." this._id ".data.grade.value")
         inputValue=this.data.grade.value
