--- a/src/templates/parts/mystic/parts/summons.hbs
+++ b/src/templates/parts/mystic/parts/summons.hbs
@@ -1,6 +1,6 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="summons"
-  title="Invocaciones"
+  title=(localize "anima.ui.mystic.summon.title")
   addRowButtonData="add-summon"
 }}
   {{#each data.mystic.summons}}
