--- a/src/templates/parts/mystic/parts/act.hbs
+++ b/src/templates/parts/mystic/parts/act.hbs
@@ -1,18 +1,18 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="act"
-  title="ACT"
+  title=(localize "anima.ui.mystic.act.title")
 }}
   {{>
   "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
     class="main"
-    title="Principal"
+    title=(localize "anima.ui.mystic.act.main.title")
     inputName="data.mystic.act.main.value"
     inputValue=data.mystic.act.main.value
   }}
   {{>
   "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
     class="alternative"
-    title="Alternativo"
+    title=(localize "anima.ui.mystic.act.alternative.title")
     inputName="data.mystic.act.alternative.value"
     inputValue=data.mystic.act.alternative.value
   }}
