--- a/src/templates/parts/mystic/parts/free-access-spells.hbs
+++ b/src/templates/parts/mystic/parts/free-access-spells.hbs
@@ -1,6 +1,6 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="free-access-spells"
-  title="Libre Acceso / Subvía"
+  title=(localize "anima.ui.mystic.freeAccessSpell.title")
   addRowButtonData="add-free-access-spell"
 }}
   {{#each data.mystic.freeAccessSpells}}
@@ -8,7 +8,7 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="level"
-        title="Nivel"
+        title=(localize "anima.ui.mystic.freeAccessSpell.level.title")
         hideTitle=(is "gt" @index 0)
         inputName=(concat "data.dynamic.freeAccessSpells." this._id ".data.level.value")
         inputValue=this.data.level.value
@@ -16,7 +16,7 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="spell"
-        title="Conjuro"
+        title=(localize "anima.ui.mystic.freeAccessSpell.spell.title")
         hideTitle=(is "gt" @index 0)
         inputType="text"
         inputName=(concat "data.dynamic.freeAccessSpells." this._id ".name")
@@ -25,7 +25,7 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="cost"
-        title="Coste"
+        title=(localize "anima.ui.mystic.freeAccessSpell.cost.title")
         hideTitle=(is "gt" @index 0)
         inputName=(concat "data.dynamic.freeAccessSpells." this._id ".data.cost.value")
         inputValue=this.data.cost.value
