--- a/src/templates/parts/mystic/parts/innate-magic.hbs
+++ b/src/templates/parts/mystic/parts/innate-magic.hbs
@@ -1,18 +1,18 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="innate-magic"
-  title="Magia Innata"
+  title=(localize "anima.ui.mystic.innateMagic.title")
 }}
   {{>
   "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
     class="main"
-    title="Principal"
+    title=(localize "anima.ui.mystic.innateMagic.main.title")
     inputName="data.mystic.innateMagic.main.value"
     inputValue=data.mystic.innateMagic.main.value
   }}
   {{>
   "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
     class="alternative"
-    title="Alternativo"
+    title=(localize "anima.ui.mystic.innateMagic.alternative.title")
     inputName="data.mystic.innateMagic.alternative.value"
     inputValue=data.mystic.innateMagic.alternative.value
   }}
