--- a/src/templates/parts/mystic/parts/spell-maintenances.hbs
+++ b/src/templates/parts/mystic/parts/spell-maintenances.hbs
@@ -1,6 +1,6 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="spell-maintenances"
-  title="Mantenimientos diarios"
+  title=(localize "anima.ui.mystic.spellMaintenance.title")
   addRowButtonData="add-spell-maintenance"
 }}
   {{#each data.mystic.spellMaintenances}}
@@ -8,7 +8,7 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="name"
-        title="Conjuro / Criatura"
+        title=(localize "anima.ui.mystic.spellMaintenance.name.title")
         hideTitle=(is "gt" @index 0)
         inputType="text"
         inputName=(concat "data.dynamic.spellMaintenances." this._id ".name")
@@ -17,7 +17,7 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="cost"
-        title="Coste"
+        title=(localize "anima.ui.mystic.spellMaintenance.cost.title")
         hideTitle=(is "gt" @index 0)
         inputName=(concat "data.dynamic.spellMaintenances." this._id ".data.cost.value")
         inputValue=this.data.cost.value
