--- a/src/templates/parts/mystic/parts/summoning.hbs
+++ b/src/templates/parts/mystic/parts/summoning.hbs
@@ -1,13 +1,13 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="summoning"
-  title="Convocación"
+  title=(localize "anima.ui.mystic.summoning.title")
 }}
   <div class='columns'>
     <div>
       {{>
       "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
         class="summon"
-        title="Convocar"
+        title=(localize "anima.ui.mystic.summoning.summon.title")
         rollable=true
         inputName="data.mystic.summoning.summon.value"
         inputValue=data.mystic.summoning.summon.value
@@ -15,7 +15,7 @@
       {{>
       "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
         class="bind"
-        title="Atar"
+        title=(localize "anima.ui.mystic.summoning.bind.title")
         rollable=true
         inputName="data.mystic.summoning.bind.value"
         inputValue=data.mystic.summoning.bind.value
@@ -25,7 +25,7 @@
       {{>
       "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
         class="control"
-        title="Dominar"
+        title=(localize "anima.ui.mystic.summoning.control.title")
         rollable=true
         inputName="data.mystic.summoning.control.value"
         inputValue=data.mystic.summoning.control.value
@@ -33,7 +33,7 @@
       {{>
       "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
         class="banish"
-        title="Desconvocar"
+        title=(localize "anima.ui.mystic.summoning.banish.title")
         rollable=true
         inputName="data.mystic.summoning.banish.value"
         inputValue=data.mystic.summoning.banish.value
