--- a/src/templates/parts/mystic/parts/zeon-regeneration.hbs
+++ b/src/templates/parts/mystic/parts/zeon-regeneration.hbs
@@ -1,11 +1,11 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="zeon-regeneration"
-  title="Regen. Zeon"
+  title=(localize "anima.ui.mystic.zeonRegeneration.title")
 }}
   {{>
   "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
     class="final"
-    title="Final"
+    title=(localize "anima.ui.mystic.zeonRegeneration.final.title")
     inputName="data.mystic.zeonRegeneration.current.value"
     inputValue=data.mystic.zeonRegeneration.current.value
     secondaryInputName="data.mystic.zeonRegeneration.max.value"
