--- a/src/templates/parts/mystic/parts/zeon.hbs
+++ b/src/templates/parts/mystic/parts/zeon.hbs
@@ -1,11 +1,11 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="zeon"
-  title="Zeon"
+  title=(localize "anima.ui.mystic.zeon.title")
 }}
   {{>
   "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
     class="final"
-    title="Final"
+    title=(localize "anima.ui.mystic.zeon.final.title")
     inputName="data.mystic.zeon.current.value"
     inputValue=data.mystic.zeon.current.value
     secondaryInputName="data.mystic.zeon.max.value"
