--- a/src/templates/parts/mystic/parts/magic-projection.hbs
+++ b/src/templates/parts/mystic/parts/magic-projection.hbs
@@ -11,7 +11,7 @@
     inputName="data.mystic.magicProjection.final.value"
     inputValue=data.mystic.magicProjection.final.value
   }}
-  <h3 class='title'>Desequilibrio</h3>
+  <h3 class='title'>{{localize "anima.ui.mystic.magicProjection.imbalance.title"}}</h3>
   <div class='imbalance'>
     {{>
     "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
