changes: add half of psychic tab

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -5,5 +5,5 @@
 @import 'actor-sheet.scss';
 @import 'general.scss';
 @import 'secondaries.scss';
-@import 'mentalism.scss';
+@import 'psychic.scss';
 @import 'mystic.scss';
