refactor: extract group body from group component

--- a/src/templates/parts/mystic/parts/summons.hbs
+++ b/src/templates/parts/mystic/parts/summons.hbs
@@ -3,14 +3,18 @@
   title=(localize "anima.ui.mystic.summon.title")
   addRowButtonData="add-summon"
 }}
-  {{#each data.mystic.summons}}
-    <div data-summon-id='{{this._id}}' class='summon-row'>
-      <input
-        name='data.dynamic.summons.{{this._id}}.name'
-        type='text'
-        class='input'
-        value='{{this.name}}'
-      />
-    </div>
-  {{/each}}
+  {{#> "systems/animabf/templates/parts/common/group-body.hbs"
+    class="summons"
+  }}
+    {{#each data.mystic.summons}}
+      <div data-summon-id='{{this._id}}' class='summon-row'>
+        <input
+          name='data.dynamic.summons.{{this._id}}.name'
+          type='text'
+          class='input'
+          value='{{this.name}}'
+        />
+      </div>
+    {{/each}}
+  {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
