--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -18,11 +18,15 @@
   &group {
     width: 100%;
 
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
     .group-header {
       @include group-header;
 
       position: relative;
-      z-index: 1;
+      z-index: 2;
 
       display: flex;
       align-items: center;
@@ -52,8 +56,35 @@
     .group-body {
       @include group-body;
 
+      position: relative;
+      z-index: 1;
+
       margin-top: -1.5rem;
       padding: 2rem 0.5rem 0.5rem;
+
+      min-height: 3.5rem;
+      width: 100%;
+    }
+
+    .group-footer {
+      text-align: center;
+      padding: 3px;
+      color: $white;
+      border-radius: $border-radius;
+      background: $red;
+      font-weight: 600;
+
+      display: flex;
+      align-items: flex-end;
+      justify-content: flex-end;
+
+      width: 100%;
+      min-height: 3.3rem;
+      margin-top: -1rem;
+
+      .input {
+        height: 1.25rem;
+      }
     }
   }
 
