--- a/src/templates/parts/mystic/parts/zeon.hbs
+++ b/src/templates/parts/mystic/parts/zeon.hbs
@@ -2,13 +2,17 @@
   class="zeon"
   title=(localize "anima.ui.mystic.zeon.title")
 }}
-  {{>
-  "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
-    class="final"
-    title=(localize "anima.ui.mystic.zeon.final.title")
-    inputName="data.mystic.zeon.current.value"
-    inputValue=data.mystic.zeon.current.value
-    secondaryInputName="data.mystic.zeon.max.value"
-    secondaryInputValue=data.mystic.zeon.max.value
+  {{#> "systems/animabf/templates/parts/common/group-body.hbs"
+    class="zeon"
   }}
+    {{>
+    "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
+      class="final"
+      title=(localize "anima.ui.mystic.zeon.final.title")
+      inputName="data.mystic.zeon.current.value"
+      inputValue=data.mystic.zeon.current.value
+      secondaryInputName="data.mystic.zeon.max.value"
+      secondaryInputValue=data.mystic.zeon.max.value
+    }}
+  {{/"systems/animabf/templates/parts/common/group-body.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
