--- a/src/templates/parts/psychic/psychic.hbs
+++ b/src/templates/parts/psychic/psychic.hbs
@@ -11,6 +11,7 @@
       </div>
     </div>
     {{> "systems/animabf/templates/parts/psychic/parts/mental-patterns.hbs"}}
+    {{> "systems/animabf/templates/parts/psychic/parts/innate-psychic-powers.hbs"}}
   </div>
   <div class='second-column'>
   </div>
