--- a/src/templates/parts/mystic/parts/act.hbs
+++ b/src/templates/parts/mystic/parts/act.hbs
@@ -1,7 +1,10 @@
 {{#> "systems/animabf/templates/parts/common/group.hbs"
   class="act"
-  title=(localize "anima.ui.mystic.act.title")
 }}
+  {{>
+  "systems/animabf/templates/parts/common/group-header.hbs"
+    title=(localize "anima.ui.mystic.act.title")
+  }}
   {{#> "systems/animabf/templates/parts/common/group-body.hbs"
     class="act"
   }}
