changes: complete psychic tab

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -1,6 +1,7 @@
 @import 'spacing-helpers.scss';
 @import 'display-helpers.scss';
 @import 'variable.scss';
+@import '_common.scss';
 
 @import 'actor-sheet.scss';
 @import 'general.scss';
