--- a/src/templates/parts/psychic/parts/innate-psychic-powers.hbs
+++ b/src/templates/parts/psychic/parts/innate-psychic-powers.hbs
@@ -48,8 +48,8 @@
     "systems/animabf/templates/parts/common/horizontal-titled-input.hbs"
       class="amount"
       title=(localize "anima.ui.psychic.innatePsychicPower.amount.title")
-      inputName="data.psychic.innatePsychicPower.amount"
-      inputValue=data.psychic.innatePsychicPower.amount
+      inputName="data.psychic.innatePsychicPower.amount.value"
+      inputValue=data.psychic.innatePsychicPower.amount.value
     }}
   {{/"systems/animabf/templates/parts/common/group-footer.hbs"}}
 {{/"systems/animabf/templates/parts/common/group.hbs"}}
