--- a/src/templates/parts/psychic/psychic.hbs
+++ b/src/templates/parts/psychic/psychic.hbs
@@ -14,5 +14,6 @@
     {{> "systems/animabf/templates/parts/psychic/parts/innate-psychic-powers.hbs"}}
   </div>
   <div class='second-column'>
+    {{> "systems/animabf/templates/parts/psychic/parts/psychic-powers.hbs"}}
   </div>
 </div>
