--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,5 +1,93 @@
 @import 'variable';
 
+// -----------------------
+// ------CLASS GRID-------
+// -----------------------
+.grid-1col {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 1fr;
+}
+.grid-2col {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+}
+
+.grid-3col {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
+}
+
+.grid-4col {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+}
+
+// ----------------------------
+// -------ROLLABLE CLASS-------
+// ----------------------------
+
+.rollable {
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    text-shadow: 0 0 8px red;
+  }
+}
+
+// ---------------------------
+// ------BACKGORUDCOLOR-------
+// ---------------------------
+
+.window-app .window-content {
+  background: $light-cream;
+}
+.abf.sheet.actor {
+  // ------------------------
+  // ------ALL INPUTS-------
+  // ------------------------
+
+  // TODO: Remove this generic selector and set the class selector over all inputs
+  input,
+  .input {
+    font-family: inherit;
+    border: none;
+    ::-webkit-input-placeholder {
+      text-align: center;
+    }
+
+    &:hover {
+      box-shadow: 0 0 5px $red;
+    }
+  }
+
+  // ------------------------
+  // ------ALL TEXTS--------
+  // ------------------------
+
+  .text,
+  .text-off,
+  .text-armor,
+  .label-text,
+  .level-number,
+  .xp-number,
+  .max-life,
+  .current-life,
+  .turn,
+  .max-fatigue,
+  .current-fatigue,
+  .class-text {
+    font-weight: 600;
+  }
+
+  .text-off {
+    color: $grey;
+  }
+}
+
 @mixin group-header {
   text-align: center;
   padding: 3px;
@@ -14,6 +102,13 @@
   border-radius: $border-radius;
 }
 
+@mixin input {
+  border-radius: $border-radius;
+  background: $light-cream;
+  font-weight: bold;
+  padding: 0.25rem 0.5rem;
+}
+
 .common- {
   &group {
     width: 100%;
@@ -21,6 +116,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+    border-radius: $border-radius;
 
     .group-header {
       @include group-header;
@@ -118,23 +215,24 @@
     }
 
     .input-container {
+      height: 1.5rem;
       width: 4rem;
 
       display: flex;
+      align-items: center;
+      justify-content: center;
 
       &.big {
         width: 6rem;
       }
+
+      .input {
+        text-align: center;
+      }
     }
 
     .input {
-      height: 1.5rem;
-
-      text-align: center;
-      border-radius: $border-radius;
-      background: $light-cream;
-      font-weight: bold;
-      padding: 0.25rem 0.5rem;
+      @include input;
     }
 
     .primary-input {
