--- a/src/scss/psychic.scss
+++ b/src/scss/psychic.scss
@@ -1,5 +1,4 @@
 @import 'variable.scss';
-@import '_common.scss';
 
 .psychic-tab {
   margin-top: 0.75rem;
@@ -8,7 +7,7 @@
   width: 100%;
 
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1.5fr 1fr;
   grid-column-gap: 1rem;
 
   .first-column > .sub-columns {
@@ -94,13 +93,6 @@
       .input-container {
         width: 100%;
       }
-
-      .input {
-        border-radius: $border-radius;
-        background: $light-cream;
-        font-weight: bold;
-        padding: 0.25rem 0.5rem;
-      }
     }
 
     .group-footer {
@@ -111,4 +103,97 @@
     }
   }
   // Mental Patterns
+
+  // Psychic Powers
+  .psychic-powers {
+    .psychic-power-row:first-child {
+      margin-top: 0;
+    }
+
+    .psychic-power-row {
+      margin-top: 0.5rem;
+      border-radius: $border-radius;
+      box-shadow: $card-box-shadow;
+    }
+
+    .psychic-power-row:last-child {
+      margin-bottom: 0.5rem;
+    }
+
+    .psychic-power-row .psychic-power {
+      .effect-row:first-child {
+        margin-top: 0;
+      }
+
+      .effect-row:last-child {
+        margin-bottom: 0.5rem;
+      }
+
+      .effect-row {
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+        grid-column-gap: 0.1rem;
+
+        margin-top: 0.5rem;
+
+        .input {
+          @include input;
+
+          text-align: center;
+          height: 1rem;
+        }
+      }
+
+      .psychic-power-header {
+        display: flex;
+
+        padding: 0 0.5rem;
+
+        .name {
+          margin-right: 0.75rem;
+
+          .input {
+            width: 10rem;
+          }
+        }
+
+        .level {
+          .input {
+            width: 2rem;
+          }
+        }
+
+        .input {
+          height: 1rem;
+        }
+      }
+
+      .psychic-power-footer {
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-column-gap: 0.1rem;
+
+        .label {
+          margin-left: 0.5rem;
+        }
+
+        .action-type, .bonus {
+          .input {
+            height: 1rem;
+            width: 3rem;
+          }
+        }
+
+        .has-maintenance .input {
+          width: auto;
+          margin-bottom: 0.125rem;
+        }
+      }
+
+      .input-container {
+        width: 100%;
+      }
+    }
+  }
+  // Psychic Powers
 }
