--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -10,92 +10,7 @@ $black: #000000;
 $white: #ffffff;
 $grey: #808080;
 $light-gray: #9f9c87;
+
 $border-radius: 10px;
 
-// -----------------------
-// ------CLASS GRID-------
-// -----------------------
-.grid-1col {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 1fr;
-}
-.grid-2col {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 1fr;
-}
-
-.grid-3col {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 1fr;
-}
-
-.grid-4col {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 1fr;
-}
-
-// ----------------------------
-// -------ROLLABLE CLASS-------
-// ----------------------------
-
-.rollable {
-  cursor: pointer;
-  &:hover,
-  &:focus {
-    text-shadow: 0 0 8px red;
-  }
-}
-
-// ---------------------------
-// ------BACKGORUDCOLOR-------
-// ---------------------------
-
-.window-app .window-content {
-  background: $light-cream;
-}
-.abf.sheet.actor {
-  // ------------------------
-  // ------ALL INPUTS-------
-  // ------------------------
-
-  // TODO: Remove this generic selector and set the class selector over all inputs
-  input,
-  .input {
-    font-family: inherit;
-    border: none;
-    ::-webkit-input-placeholder {
-      text-align: center;
-    }
-
-    &:hover {
-      box-shadow: 0 0 5px $red;
-    }
-  }
-
-  // ------------------------
-  // ------ALL TEXTS--------
-  // ------------------------
-
-  .text,
-  .text-off,
-  .text-armor,
-  .label-text,
-  .level-number,
-  .xp-number,
-  .max-life,
-  .current-life,
-  .turn,
-  .max-fatigue,
-  .current-fatigue,
-  .class-text {
-    font-weight: 600;
-  }
-
-  .text-off {
-    color: $grey;
-  }
-}
+$card-box-shadow: 0 0 10px 0 rgb(0 0 0 / 20%);
