--- a/src/templates/parts/general/general.hbs
+++ b/src/templates/parts/general/general.hbs
@@ -20,7 +20,7 @@
     <div class='contacts'>
       {{> "systems/animabf/templates/parts/general/parts/contacts.hbs"}}
     </div>
-    <div class='notes'>
+    <div class='_notes'>
       {{> "systems/animabf/templates/parts/general/parts/notes.hbs"}}
     </div>
   </div>
