--- a/src/templates/parts/mystic/parts/zeon-regeneration.hbs
+++ b/src/templates/parts/mystic/parts/zeon-regeneration.hbs
@@ -14,6 +14,7 @@
       title=(localize "anima.ui.mystic.zeonRegeneration.final.title")
       inputName="data.mystic.zeonRegeneration.current.value"
       inputValue=data.mystic.zeonRegeneration.current.value
+      hasSecondaryInput=true
       secondaryInputName="data.mystic.zeonRegeneration.max.value"
       secondaryInputValue=data.mystic.zeonRegeneration.max.value
     }}
