--- a/src/templates/parts/psychic/parts/psychic-power.hbs
+++ b/src/templates/parts/psychic/parts/psychic-power.hbs
@@ -14,6 +14,7 @@
       title=(localize "anima.ui.psychic.psychicPower.power.title")
       inputName="data.psychic.psychicPower.used.value"
       inputValue=data.psychic.psychicPower.used.value
+      hasSecondaryInput=true
       secondaryInputName="data.psychic.psychicPower.max.value"
       secondaryInputValue=data.psychic.psychicPower.max.value
     }}
