--- a/src/templates/parts/common/vertical-titled-input.hbs
+++ b/src/templates/parts/common/vertical-titled-input.hbs
@@ -4,7 +4,11 @@
   hideTitle=this.hideTitle
   title=this.title
   rollable=this.rollable
+  rollableDice=this.rollableDice
   rollableMessage=this.rollableMessage
   inputName=this.inputName
   inputValue=this.inputValue
+  hasSecondaryInput=this.hasSecondaryInput
+  secondaryInputName=this.secondaryInputName
+  secondaryInputValue=this.secondaryInputValue
 }}
