--- a/src/templates/parts/mystic/parts/zeon.hbs
+++ b/src/templates/parts/mystic/parts/zeon.hbs
@@ -14,6 +14,7 @@
       title=(localize "anima.ui.mystic.zeon.final.title")
       inputName="data.mystic.zeon.current.value"
       inputValue=data.mystic.zeon.current.value
+      hasSecondaryInput=true
       secondaryInputName="data.mystic.zeon.max.value"
       secondaryInputValue=data.mystic.zeon.max.value
     }}
